# crossref_data_extraction

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: main.py
src/api/: crossref_client.py
src/extractors/: base_extractor.py  llm_extractor.py
src/models/: schemas.py
